Add CSS library and basic styling
- Use normalize.css
- Page layout improvements in main.css

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <head>
   <title>LinkedOut</title>
+
+  <!-- Use normalize.css for cross-browser consistency
+       http://necolas.github.io/normalize.css/ -->
+  <link rel="stylesheet" href="/normalize.css">
+
+  <!-- Load main stylesheet -->
+  <link rel="stylesheet" href="/main.css">
 </head>
 <body>
   <header>
