--- a/views/resumes/show.erb
+++ b/views/resumes/show.erb
@@ -1,34 +1,35 @@
-<h1>My Résumé</h1>
+<div class="resume">
+  <h3>My Résumé</h3>
 
-<section class="profile">
-  <h2><%= @user.name %></h2>
-  <div class="contact-info">
-    <%= @user.email %>
-     | <%= @user.phone %>
-     | <%= @user.website %>
-  </div>
+  <section class="profile">
+    <h1><%= @user.name %></h1>
+    <div class="contact-info">
+      <%= @user.email %>
+       | <%= @user.phone %>
+       | <%= @user.website %>
+    </div>
 
-  <p><%= @user.bio %></p>
-</section>
+    <p><%= @user.bio %></p>
+  </section>
 
-<section class="jobs">
-  <h2>Jobs</h2>
-  <ul>
-  <% @jobs.each do |job| %>
-    <li>
-      <h4><%= job.job_title %> at <%= job.company_name %></h4>
-      <p><%= job.job_description %></p>
-    </li>
-  <% end %>
-  </ul>
-</section>
+  <section class="jobs">
+    <h2>Jobs</h2>
+    <ul>
+    <% @jobs.each do |job| %>
+      <li>
+        <h4><%= job.job_title %> at <%= job.company_name %></h4>
+        <p><%= job.job_description %></p>
+      </li>
+    <% end %>
+    </ul>
+  </section>
 
-<section class="skills">
-  <h2>Skills</h2>
-  <ul>
-  <% @skills.each do |skill| %>
-    <li><%= skill.name %></li>
-  <% end %>
-  </ul>
-</section>
-
+  <section class="skills">
+    <h2>Skills</h2>
+    <ul>
+    <% @skills.each do |skill| %>
+      <li><%= skill.name %></li>
+    <% end %>
+    </ul>
+  </section>
+</div>
