--- a/views/resumes/show.erb
+++ b/views/resumes/show.erb
@@ -2,14 +2,16 @@
   <h3>My Résumé</h3>
 
   <section class="profile">
-    <h1><%= @user.name %></h1>
+    <h1><%= default_user.name %></h1>
     <div class="contact-info">
-      <%= @user.email %>
-       | <%= @user.phone %>
-       | <%= @user.website %>
+      <%= default_user.email %>
+       | <%= default_user.phone %>
+       | <%= default_user.website %>
     </div>
 
-    <p><%= @user.bio %></p>
+    <p><%= default_user.bio %></p>
+
+    <a href="/edit" title=""></a>
   </section>
 
   <section class="jobs">
