User can edit user information at /resumes/edit
- Link to edit page from résumé show page
- Form for editing user information, pre-populated with existing data
- Routes to update user data in database

--- a/views/resumes/show.erb
+++ b/views/resumes/show.erb
@@ -1,5 +1,6 @@
 <div class="resume">
   <h3>My Résumé</h3>
+  <a href="/resumes/edit" title="Edit resume">Edit</a>
 
   <section class="profile">
     <h1><%= default_user.name %></h1>
@@ -10,8 +11,6 @@
     </div>
 
     <p><%= default_user.bio %></p>
-
-    <a href="/edit" title=""></a>
   </section>
 
   <section class="jobs">
