User can edit skills information at /resumes/edit
The résumé edit page will now render all of the skills as forms that
users can update. As of now, each skill is editable in isolation (i.e. no
batch updates of multiple skill).

Added a new route to handle updating skills.

--- a/views/resumes/edit.erb
+++ b/views/resumes/edit.erb
@@ -31,7 +31,6 @@
 
   <section class="jobs">
     <h2>Jobs</h2>
-
     <ul>
     <% @jobs.each do |job| %>
       <li>
@@ -49,6 +48,26 @@
           <br>
 
           <input type="submit" value="Update job">
+        </form>
+      </li>
+    <% end %>
+    </ul>
+  </section>
+
+  <section class="skills">
+    <h2>Skills</h2>
+    <ul>
+    <% @skills.each do |skill| %>
+      <li>
+        <form name="edit_skill" action="/skills/edit" method="post" accept-charset="utf-8">
+          <input type="hidden" name="_method" value="put">
+
+          <input type="hidden" name="skill[id]" value="<%= skill.id %>">
+
+          <input type="text" name="skill[name]" value="<%= skill.name %>">
+          <br>
+
+          <input type="submit" value="Update skill">
         </form>
       </li>
     <% end %>
