--- a/views/resumes/edit.erb
+++ b/views/resumes/edit.erb
@@ -29,48 +29,50 @@
     </form>
   </section>
 
-  <section class="jobs">
-    <h2>Jobs</h2>
-    <ul>
-    <% @jobs.each do |job| %>
-      <li>
-        <form name="edit_job" action="/jobs/edit" method="post" accept-charset="utf-8">
-          <input type="hidden" name="_method" value="put">
+  <div class="professional_info">
+    <section class="jobs">
+      <h2>Jobs</h2>
+      <ul>
+      <% @jobs.each do |job| %>
+        <li>
+          <form name="edit_job" action="/jobs/edit" method="post" accept-charset="utf-8">
+            <input type="hidden" name="_method" value="put">
 
-          <input type="hidden" name="job[id]" value="<%= job.id %>">
+            <input type="hidden" name="job[id]" value="<%= job.id %>">
 
-          <input type="text" name="job[job_title]" value="<%= job.job_title %>"> at
-          <input type="text" name="job[company_name]" value="<%= job.company_name %>">
-          <br>
+            <input type="text" name="job[job_title]" value="<%= job.job_title %>"> at
+            <input type="text" name="job[company_name]" value="<%= job.company_name %>">
+            <br>
 
-          <label for="job[job_description]">Job Description</label>
-          <textarea name="job[job_description]"><%= job.job_description %></textarea>
-          <br>
+            <label for="job[job_description]">Job Description</label>
+            <textarea name="job[job_description]"><%= job.job_description %></textarea>
+            <br>
 
-          <input type="submit" value="Update job">
-        </form>
-      </li>
-    <% end %>
-    </ul>
-  </section>
+            <input type="submit" value="Update job">
+          </form>
+        </li>
+      <% end %>
+      </ul>
+    </section>
 
-  <section class="skills">
-    <h2>Skills</h2>
-    <ul>
-    <% @skills.each do |skill| %>
-      <li>
-        <form name="edit_skill" action="/skills/edit" method="post" accept-charset="utf-8">
-          <input type="hidden" name="_method" value="put">
+    <section class="skills">
+      <h2>Skills</h2>
+      <ul>
+      <% @skills.each do |skill| %>
+        <li>
+          <form name="edit_skill" action="/skills/edit" method="post" accept-charset="utf-8">
+            <input type="hidden" name="_method" value="put">
 
-          <input type="hidden" name="skill[id]" value="<%= skill.id %>">
+            <input type="hidden" name="skill[id]" value="<%= skill.id %>">
 
-          <input type="text" name="skill[name]" value="<%= skill.name %>">
-          <br>
+            <input type="text" name="skill[name]" value="<%= skill.name %>">
+            <br>
 
-          <input type="submit" value="Update skill">
-        </form>
-      </li>
-    <% end %>
-    </ul>
-  </section>
+            <input type="submit" value="Update skill">
+          </form>
+        </li>
+      <% end %>
+      </ul>
+    </section>
+  </div>
 </div>
