--- a/views/resumes/show.erb
+++ b/views/resumes/show.erb
@@ -1,36 +1,40 @@
 <div class="resume">
-  <h3>My Résumé</h3>
-  <a href="/resumes/edit" title="Edit resume">Edit</a>
+  <div class="page_header">
+    <a href="/resumes/edit" title="Edit resume">Edit</a>
+    <h3>My Résumé</h3>
+  </div>
 
   <section class="profile">
     <h1><%= default_user.name %></h1>
     <div class="contact-info">
       <%= default_user.email %>
        | <%= default_user.phone %>
-       | <%= default_user.website %>
+       | <a href="<%= default_user.website %>"><%= default_user.website %></a>
     </div>
 
     <p><%= default_user.bio %></p>
   </section>
 
-  <section class="jobs">
-    <h2>Jobs</h2>
-    <ul>
-    <% @jobs.each do |job| %>
-      <li>
-        <h4><%= job.job_title %> at <%= job.company_name %></h4>
-        <p><%= job.job_description %></p>
-      </li>
-    <% end %>
-    </ul>
-  </section>
+  <div class="professional_info">
+    <section class="jobs">
+      <h2>Jobs</h2>
+      <ul>
+      <% @jobs.each do |job| %>
+        <li>
+          <h4><%= job.job_title %> at <%= job.company_name %></h4>
+          <p><%= job.job_description %></p>
+        </li>
+      <% end %>
+      </ul>
+    </section>
 
-  <section class="skills">
-    <h2>Skills</h2>
-    <ul>
-    <% @skills.each do |skill| %>
-      <li><%= skill.name %></li>
-    <% end %>
-    </ul>
-  </section>
+    <section class="skills">
+      <h2>Skills</h2>
+      <ul>
+      <% @skills.each do |skill| %>
+        <li><%= skill.name %></li>
+      <% end %>
+      </ul>
+    </section>
+  </div>
 </div>
