--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,6 @@
+/*
+ * HEADER
+ */
 header {
   min-width: 100%;
   text-align: center;
@@ -11,87 +14,112 @@ header h1 {
   font-size: 1.5em;
 }
 
-/* Résumé page content is centered and has a default width */
-.resume {
+
+/*
+ * PAGE
+ */
+.page {
   margin: 0 auto;
   width: 720px;
 }
 
-/* The page header is separated from the main content with a border */
-.page_header {
+/* Separate page nav area from the main content with a border */
+.page nav {
   padding-bottom: 0.25em;
   border-bottom: 1px solid;
+  margin-bottom: 0.5em;
 }
 
-.page_header a {
+.page nav a {
   float: right;
 }
 
-/* Profile section */
-.profile { margin-bottom: 3em; }
-.profile p { font-size: 1.5em; }
+/* Highlight section for featured content */
+.highlight {
+  width: 100%;
+  margin-bottom: 3em;
+}
 
-/* Professional info section (wraps jobs and skills) */
-.professional_info {
+.highlight p { font-size: 1.5em; }
+
+
+/*
+ * GRID
+ */
+.row {
   display: block;
   clear: both;
 }
 
-.professional_info:after {
+.row:after {
   display: block;
   content: "";
   line-height: 0;
   clear: both;
 }
 
-/* Cancel extra whitespace and list markers in job and skill lists */
-.jobs ul, .skills ul {
-  padding: 0;
-  list-style-type: none;
+/* 1/3 column (720 * 1/3) */
+.one_third {
+  float: left;
+  width: 240px;
 }
 
-/* Jobs section takes up 2/3rds of page (720 * 2/3 - margin) */
-.jobs {
+/* 2/3 column (720 * 2/3 - margin) */
+.two_thirds {
   float: left;
   width: 460px;
   margin-right: 20px;
 }
 
-.jobs li { margin-bottom: 2.5em; }
-.jobs li h4 { margin-bottom: 0; }
 
-/* Skills section takes up 1/3rd of page */
-.skills {
-  float: left;
-  width: 240px;
-}
-
-.skills li {
-  padding: 0.25em;
-  margin-bottom: 1em;
-  background-color: #ccc;
-}
-
-/* General form styling */
+/*
+ * FORMS
+ */
 textarea {
   width: 360px;
-  height: 48px;
+  height: 3em;
 }
 
-/* Profile form styling */
-.profile form label {
+form.vertical label {
   display: inline-block;
   min-width: 120px;
   vertical-align: top;
 }
 
-.profile form input { margin-bottom: 5px; }
+form.vertical input { margin-bottom: 0.25em; }
 
-.profile form input[type="submit"] {
+form.vertical input[type="submit"] {
   margin-left: 124px;
-  padding: 5px;
+  padding: 0.25em;
 }
 
-/* Skills form styling */
-.skills form input[type="text"] { max-width: 160px; }
-.skills form input[type="submit"] { float: right; }
+form.mini input[type="text"] { max-width: 160px; }
+form.mini input[type="submit"] { float: right; }
+
+
+/*
+ * UTILITY CLASSES
+ */
+.no_bullets {
+  list-style-type: none;
+}
+
+.no_padding {
+  padding: 0;
+}
+
+
+/*
+ * SECTION STYLING
+ */
+
+/* Jobs section */
+.jobs li { margin-bottom: 2.5em; }
+.jobs li h4 { margin-bottom: 0; }
+
+/* Skills section */
+.skills li {
+  padding: 0.25em;
+  margin-bottom: 1em;
+  background-color: #ccc;
+}
