--- a/views/resumes/edit.erb
+++ b/views/resumes/edit.erb
@@ -4,33 +4,7 @@
     <h3>Edit My Résumé</h3>
   </nav>
 
-  <section class="profile">
-    <form name="edit_user" action="/users/edit" method="post" accept-charset="utf-8" class="vertical">
-      <input type="hidden" name="_method" value="put">
-
-      <label for="user[name]">Name</label>
-      <input type="text" name="user[name]" value="<%= default_user.name %>">
-      <br>
-
-      <label for="user[email]">Email</label>
-      <input type="email" name="user[email]" value="<%= default_user.email %>">
-      <br>
-
-      <label for="user[phone]">Phone</label>
-      <input type="phone" name="user[phone]" value="<%= default_user.phone %>">
-      <br>
-
-      <label for="user[website]">Website</label>
-      <input type="url" name="user[website]" value="<%= default_user.website %>">
-      <br>
-
-      <label for="user[bio]">Bio</label>
-      <textarea name="user[bio]"><%= default_user.bio %></textarea>
-      <br>
-
-      <input type="submit" value="Update profile">
-    </form>
-  </section>
+  <%= erb :'partials/profile_edit' %>
 
   <div class="row">
     <section class="jobs two_thirds">
