Use sinatra-partial gem for rendering partials

--- a/views/resumes/edit.erb
+++ b/views/resumes/edit.erb
@@ -4,7 +4,7 @@
     <h3>Edit My Résumé</h3>
   </nav>
 
-  <%= erb :'partials/profile_edit' %>
+  <%= partial :'partials/profile_edit' %>
 
   <div class="row">
     <section class="jobs two_thirds">
