--- a/views/resumes/show.erb
+++ b/views/resumes/show.erb
@@ -4,7 +4,7 @@
     <h3>My Résumé</h3>
   </nav>
 
-  <%= erb :'partials/profile_show' %>
+  <%= partial :'partials/profile_show' %>
 
   <div class="row">
     <section class="jobs two_thirds">
