Don't use helper method `default_user` in profile partials

--- a/views/partials/profile.erb
+++ b/views/partials/profile.erb
@@ -1,10 +1,10 @@
 <section class="profile highlight">
-  <h1><%= default_user.name %></h1>
+  <h1><%= user.name %></h1>
   <div class="contact-info">
-    <%= default_user.email %>
-     | <%= default_user.phone %>
-     | <a href="<%= default_user.website %>"><%= default_user.website %></a>
+    <%= user.email %>
+     | <%= user.phone %>
+     | <a href="<%= user.website %>"><%= user.website %></a>
   </div>
 
-  <p><%= default_user.bio %></p>
+  <p><%= user.bio %></p>
 </section>
