Move new skill form into partial; edit name of partials

--- a/views/resumes/show.erb
+++ b/views/resumes/show.erb
@@ -19,13 +19,7 @@
       <ul class="no_bullets no_padding">
         <%= partial :'partials/skill', collection: @skills %>
 
-        <li>
-          <form name="new_skill" action="/skills" method="post" accept-charset="utf-8" class="mini">
-            <input type="text" name="skill[name]" placeholder="add a skill">
-
-            <input type="submit" value="Save">
-          </form>
-        </li>
+        <%= partial :'partials/skill_new' %>
       </ul>
     </section>
   </div>
