--- a/views/partials/skill_edit.erb
+++ b/views/partials/skill_edit.erb
@@ -1,4 +1,4 @@
-<% skill = skill_form %>
+<% skill = skill_edit %>
 <li>
   <form name="edit_skill" action="/skills/edit" method="post" accept-charset="utf-8" class="mini">
     <input type="hidden" name="_method" value="put">
