--- a/views/resumes/edit.erb
+++ b/views/resumes/edit.erb
@@ -17,7 +17,7 @@
     <section class="skills one_third">
       <h2>Skills</h2>
       <ul class="no_bullets no_padding">
-        <%= partial :'partials/skill_form', collection: @skills %>
+        <%= partial :'partials/skill_edit', collection: @skills %>
       </ul>
     </section>
   </div>
