Can add jobs from résumé show page; edit partial names

--- a/views/partials/job_edit.erb
+++ b/views/partials/job_edit.erb
@@ -2,7 +2,7 @@
   # When rendering a partial, the collection item takes the name
   # of the file for the item, so the job object is assigned to
   # the local variable `job_form`
-  job = job_form
+  job = job_edit
 %>
 <li>
   <form name="edit_job" action="/jobs/edit" method="post" accept-charset="utf-8">
