--- a/views/resumes/edit.erb
+++ b/views/resumes/edit.erb
@@ -10,7 +10,7 @@
     <section class="jobs two_thirds">
       <h2>Jobs</h2>
       <ul class="no_bullets no_padding">
-        <%= partial :'partials/job_form', collection: @jobs %>
+        <%= partial :'partials/job_edit', collection: @jobs %>
       </ul>
     </section>
 
