--- a/views/resumes/show.erb
+++ b/views/resumes/show.erb
@@ -11,6 +11,8 @@
       <h2>Jobs</h2>
       <ul class="no_bullets no_padding">
         <%= partial :'partials/job', collection: @jobs %>
+
+        <%= partial :'partials/job_new' %>
       </ul>
     </section>
 
