--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,10 +4,10 @@
 
   <!-- Use normalize.css for cross-browser consistency
        http://necolas.github.io/normalize.css/ -->
-  <link rel="stylesheet" href="/normalize.css">
+  <link rel="stylesheet" href="/css/normalize.css">
 
   <!-- Load main stylesheet -->
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   <header>
