--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,5 +17,10 @@
 
   <%= yield %>
 
+  <!-- Load jQuery version 1.11.1 (uncompressed) -->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.js"></script>
+
+  <!-- Load own scripts -->
+  <script type="text/javascript" src="/js/main.js"></script>
 </body>
 <html>
