Can delete jobs from résumé show page
- Add form to job partial for sending delete request
- New utility CSS class for floating right

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -108,6 +108,11 @@ form.mini input[type="submit"] { float: right; }
   padding: 0;
 }
 
+.float_right {
+  float: right;
+  padding-left: 1em;
+}
+
 
 /*
  * SECTION STYLING
