--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,6 +21,7 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.1.js"></script>
 
   <!-- Load own scripts -->
-  <script type="text/javascript" src="/js/main.js"></script>
+  <script type="text/javascript" src="/js/jobs.js"></script>
+  <script type="text/javascript" src="/js/skills.js"></script>
 </body>
 <html>
