--- a/views/partials/job_edit.erb
+++ b/views/partials/job_edit.erb
@@ -1,10 +1,8 @@
-<%
-  # When rendering a partial, the collection item takes the name
-  # of the file for the item, so the job object is assigned to
-  # the local variable `job_form`
-  job = job_edit
-%>
+<% if hidden %>
+<li class="hidden">
+<% else %>
 <li>
+<% end %>
   <form name="edit_job" action="/jobs/edit" method="post" accept-charset="utf-8">
     <input type="hidden" name="_method" value="put">
 
