--- a/views/resumes/edit.erb
+++ b/views/resumes/edit.erb
@@ -10,7 +10,9 @@
     <section class="jobs two_thirds">
       <h2>Jobs</h2>
       <ul class="no_bullets no_padding">
-        <%= partial :'partials/job_edit', collection: @jobs %>
+        <% @jobs.each do |job| %>
+          <%= partial :'partials/job_edit', :locals => { :job => job, :hidden => false } %>
+        <% end %>
       </ul>
     </section>
 
