--- a/views/partials/job.erb
+++ b/views/partials/job.erb
@@ -4,6 +4,7 @@
     <input type="hidden" name="job[id]" value="<%= job.id %>">
     <input type="submit" value="Delete">
   </form>
+  <a href="/resumes/edit" title="Edit job" class="js_edit_job float_right">Edit</a>
   <h4><%= job.job_title %> at <%= job.company_name %></h4>
   <p><%= job.job_description %></p>
 </li>
