--- a/views/resumes/show.erb
+++ b/views/resumes/show.erb
@@ -10,7 +10,10 @@
     <section class="jobs two_thirds">
       <h2>Jobs</h2>
       <ul class="no_bullets no_padding">
-        <%= partial :'partials/job', collection: @jobs %>
+        <% @jobs.each do |job| %>
+          <%= partial :'partials/job', :locals => { :job => job } %>
+          <%= partial :'partials/job_edit', :locals => { :job => job, :hidden => true } %>
+        <% end %>
 
         <%= partial :'partials/job_new' %>
       </ul>
