Alter HTML structure of job listings
Makes more sense for the job info and the edit form to both be inside
the same <li> tag, since they will never be displayed at the same time
and thus act like a single list item.

This also makes it easier to associate the form with its corresponding
job info element from the JavaScript.

--- a/views/partials/job.erb
+++ b/views/partials/job.erb
@@ -1,4 +1,4 @@
-<li>
+<div class="job">
   <form name="delete_job" action="/jobs" method="post" accept-charset="utf-8" class="float_right">
     <input type="hidden" name="_method" value="delete">
     <input type="hidden" name="job[id]" value="<%= job.id %>">
@@ -7,4 +7,4 @@
   <a href="/resumes/edit" title="Edit job" class="js_edit_job float_right">Edit</a>
   <h4><%= job.job_title %> at <%= job.company_name %></h4>
   <p><%= job.job_description %></p>
-</li>
+</div>
