--- a/views/partials/job.erb
+++ b/views/partials/job.erb
@@ -1,7 +1,6 @@
 <div class="job">
-  <form name="delete_job" action="/jobs" method="post" accept-charset="utf-8" class="float_right">
+  <form name="delete_job" action="/jobs/<%= job.id %>" method="post" accept-charset="utf-8" class="float_right">
     <input type="hidden" name="_method" value="delete">
-    <input type="hidden" name="job[id]" value="<%= job.id %>">
     <input type="submit" value="Delete">
   </form>
   <a href="/resumes/edit" title="Edit job" class="js_edit_job float_right">Edit</a>
