--- a/views/partials/skill_edit.erb
+++ b/views/partials/skill_edit.erb
@@ -1,9 +1,7 @@
 <% skill = skill_edit %>
 <li>
-  <form name="edit_skill" action="/skills/edit" method="post" accept-charset="utf-8" class="mini">
+  <form name="edit_skill" action="/skills/<%= skill.id %>" method="post" accept-charset="utf-8" class="mini">
     <input type="hidden" name="_method" value="put">
-
-    <input type="hidden" name="skill[id]" value="<%= skill.id %>">
 
     <input type="text" name="skill[name]" value="<%= skill.name %>">
 
