Asynchronously delete skills
Adds a delete button to skills on the résumé show page so that user can
remove skills as needed

--- a/views/partials/skill.erb
+++ b/views/partials/skill.erb
@@ -1,1 +1,5 @@
+<form name="delete_skill" action="/skills/<%= skill.id %>" method="post" accept-charset="utf-8" class="float_right">
+  <input type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete">
+</form>
 <%= skill.name %>
