--- a/views/partials/job.erb
+++ b/views/partials/job.erb
@@ -3,7 +3,7 @@
     <input type="hidden" name="_method" value="delete">
     <input type="submit" value="Delete">
   </form>
-  <a href="/resumes/edit" title="Edit job" class="js_edit_job float_right">Edit</a>
+  <a href="#" title="Edit job" class="js_edit_job float_right">Edit</a>
   <h4><%= job.job_title %> at <%= job.company_name %></h4>
   <p><%= job.job_description %></p>
 </div>
