Use JS to auto-hide job edit forms on page load
Remove poor architecture of job edit partials requiring a "hidden" local
variable to be assigned. Legacy of earlier version when job edit forms
were managed by both JS and pure HTML.

--- a/views/resumes/show.erb
+++ b/views/resumes/show.erb
@@ -13,7 +13,7 @@
         <% @jobs.each do |job| %>
           <li>
             <%= partial :'partials/job', :locals => { :job => job } %>
-            <%= partial :'partials/job_edit', :locals => { :job => job, :hidden => true } %>
+            <%= partial :'partials/job_edit', :locals => { :job => job } %>
           <li>
         <% end %>
 
