change form default text from value to placeholder

--- a/views/partials/job_new.erb
+++ b/views/partials/job_new.erb
@@ -4,7 +4,7 @@
   <br>
 
   <label for="job[job_description]">Job Description</label><br>
-  <textarea name="job[job_description]">Your life story goes here. Keep it concise.</textarea>
+  <textarea name="job[job_description]" placeholder="Your life story goes here. Keep it concise."></textarea>
   <br>
 
   <input type="submit" value="Add job">
