users can view, add, and delete schools--can't edit yet

--- a/views/resumes/show.erb
+++ b/views/resumes/show.erb
@@ -50,8 +50,8 @@
         <% end %>
 
         <li>
-
-        </li>Form goes here
+          <%= partial :'partials/school_new' %>
+        </li>
       </ul>
     </section>
   </div>
