--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,5 +23,6 @@
   <!-- Load own scripts -->
   <script type="text/javascript" src="/js/jobs.js"></script>
   <script type="text/javascript" src="/js/skills.js"></script>
+  <script type="text/javascript" src="/js/schools.js"></script>
 </body>
 <html>
